[package]
name = "geogetter"
version = "0.1.5"
edition = "2021"
description = "simple library that connects to the OpenStreetMap API to retrive all the information about the given string"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.12.4", features = ["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
tokio = {version="1.37.0", features = ["full"]}
